Fix flickering in new tab title after r444582.

DidStartNavigation is called too late to prevent flickering with PlzNavigate disabled. So bring back overriding of DidStartNavigationToPendingEntry for the non-PlzNavigate case.

BUG=682774

Review-Url: https://codereview.chromium.org/2644963004
Cr-Commit-Position: refs/heads/master@{#445055}

Former-commit-id: b1c7a2ae38ea453f101480ab91ee98e6acebf56f